<resources>
    <string name="app_name">GoFitness</string>
    <string name="title_activity_maps">Map</string>
    <string name="testTimeString">Sun, Sep 23 19:19</string>
    <string name="collectedString">You have collected</string>
    <string name="readyToGoOut">Ready to go outside?</string>
    <string name="letsgo">Yes, Let\'s go</string>
    <string name="traveledDistance">traveledDistance</string>
    <string name="weatherIcon">Weather Icon</string>
    <string name="candyIcon">Candy Icon</string>
    <string name="locationIcon">Location Icon</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="New_achievement">New achievement</string>
    <string name="title">Congratulate! You have finished your first 100 meters!</string>
    <string name="isNotificationShown">isNotificationShown</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
